fix: imrove readability for `h1`

--- a/styles/elements.css
+++ b/styles/elements.css
@@ -1,5 +1,5 @@
 h1 {
     color: black;
     font-size: 6rem;
-    font-weight: 500;
+    font-weight: 600;
 }
